ADD: Create style for button

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Ripple effect</title>
+    <title>Ripple effect - without JS</title>
   </head>
+
   <body>
-    <div class="container">
-      <button class="btn ripple">Click here</button>
+    <div class="container column flex">
+      <div class="">
+        <h1>Ripple-without-JS</h1>
+        <p>Create Material Design ripple effect in your HTML without using a single line of JS.</p>
+      </div>
+      <div class="flex box-btn">
+        <button class="btn ripple">Click here</button>
+        <a href="https://github.com/Kvaibhav01/Ripple-without-JS" class="btn btn-outline ripple">Github</a>
+      </div>
     </div>
   </body>
+
 </html>
